public/assets/skin/overrides/active_snippets_overrides.css
.snippets-list .snippets-left-nav {}

.snippets-list aside#snippets-sidebar-left {
    transition: all 0.2s ease;
    color: #666;
    background-color: #fafafa;
    border-right: 1px solid #DDD;
    overflow: hidden;
    float: left;
    width: 230px;
    font-size: 13px;
}

.snippets-list .search-widget {
    background-color: #f2f2f2;
    border-top: none;
    border-bottom: 1px solid #eaeaea;
}

.snippets-list .sidebar-left-content ul {
    overflow-y: auto;
    overflow-x: hidden;
    min-height: 400px;
}

.snippets-list .sidebar-menu-container {
    overflow-y: scroll;
    height: 100%;
}

.snippets-list .sidebar-menu > li > a {
    color: #666;
}

.snippets-list .sidebar-menu > li {
    border-bottom: 1px solid #eaeaea;
}

.snippets-list .code-pane {
    margin-left: 0;
}

.snippets-list .code-area {
    float: left;
}

.snippets-list .CodeMirror {
    border: none;
}

.snippets-header {
    height: 40px;
    background-color: #fafafa;
    border-top: none;
    border-bottom: 1px solid #eaeaea;
}

.snippets-header .snippet-name-container {
    float: left;
    height: 100%;
}

.snippets-header .snippet-name {
    float: left;
    margin-left: 15px;
    margin-right: 10px;
}

.snippets-header .control-buttons-container {
    float: right;
    margin-top: 4px;
}

.snippets-list .js-snippet-description {
    color: #000;
    overflow: scroll;
    position: absolute;
    z-index: 5;
    background-color: rgba(255, 255, 255, 0.9);
    /* opacity */
}

.snippets-code-container {
    overflow-x: hidden;
}

.add-snippet-to-page-container {
    float: left;
}

.snippets-list .select2-container--default .select2-selection--single {
    border-radius: 0px;
    border: 1px solid #e8e8e8;
    height: 31px;
    outline: none;
    left: 4px;
}

.snippets-list .select2-container {
    left: 4px;
}

.snippets-list .js-snippet-alert {
    z-index: 10;
    display: none;
    background-color: #f6bb42 !important;
    height: 40px;
    border-radius: 0;
    line-height: 0.5;
    text-align: center;
    margin-bottom: 0;
    color: #4f4f4f;
    font-size: 13px;
    position: relative;
}

.snippet-list-title {
    text-transform: uppercase;
    color: #908885;
    font-size: 12px;
    font-weight: 600;
    margin-left: 10px;
    margin-top: 5px;
}

.empty-js-snippets-list-view {
    margin-top: 10px !important;
    padding-bottom: 10px !important;
}

.snippets-list .snippet-info-content {
    float: left;
    width: 100%
}

